plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id "org.flywaydb.flyway" version '8.0.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.quizlet'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.springframework.boot:spring-boot-starter-mail'

	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.flywaydb:flyway-core'
	runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.19.0'

	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	implementation 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
}

flyway {
	url = 'jdbc:postgresql://localhost:5433/quizlet_db?searchpath=public'
	user = 'postgres'
	password = 'postgres'
	locations = ['classpath:ini_data/migration/COMMON']
}

tasks.named('test') {
	useJUnitPlatform()
}